# cmocha

./: CMakeLists.txt  README.md  package.json
cmake/: lib.cmake
src/lib/: cmocha.c
